<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_margin="5dp"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="#293462"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:paddingLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/head"
                    android:textColor="#ffffff"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-black"

                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxHeight="30dp"
                    android:src="@drawable/profile" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:background="#293462"
                android:orientation="vertical"
                >
                <TextView
                    android:textStyle="normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shead"
                    android:paddingLeft="20dp"
                    android:textColor="#ec9b3b"
                    android:textSize="20sp"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="@string/subhead"
                    android:textColor="#ffffff"
                    android:textSize="15sp"
                    android:paddingBottom="10dp"

                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:background="#00818a"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:text="@string/h1"
                        android:textColor="#ec9b3b"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:text="@string/p1"
                        android:textColor="#ffffff" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:paddingTop="10dp"
                        android:text="@string/h2"
                        android:textColor="#ec9b3b"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:text="@string/p2"
                        android:textColor="#ffffff" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:paddingTop="10dp"
                        android:text="@string/h3"
                        android:textColor="#ec9b3b"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:text="@string/p3"
                        android:textColor="#ffffff" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:text="@string/h4"
                        android:textColor="#000000"
                        android:textSize="20sp" />

                    <TextView
                        android:paddingTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:text="@string/p4"
                        android:textColor="#000000" />

                    <LinearLayout

                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="10dp"
                        android:background="#ec9b3b"
                        android:paddingBottom="10dp"
                        ></LinearLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:text="@string/h5"
                        android:textColor="#000000"
                        android:textSize="20sp" />

                    <TextView
                        android:paddingTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:text="@string/p5"
                        android:textColor="#000000" />

                    <LinearLayout

                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="10dp"
                        android:background="#ec9b3b"
                        android:paddingBottom="10dp"
                        ></LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:text="@string/h6"
                        android:textColor="#000000"
                        android:textSize="20sp" />

                    <TextView
                        android:paddingTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:text="@string/p6"
                        android:textColor="#000000" />







                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


    </ScrollView>





</LinearLayout>